# ai-agents-code-editing

./: .editorconfig  .gitignore  LICENSE  README.md  format.sh  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
code_editing/: .gitignore  __init__.py  code_editor.py
code_editing/agents/: agent_codeeditor.py  agent_graph.py  graph_factory.py  run.py
code_editing/agents/collect_edit/: __init__.py  collect_edit.py
code_editing/agents/context_providers/: context_provider.py
code_editing/agents/end_to_end/: __init__.py  agent_only.py  self_reflection.py
code_editing/agents/graph/: __init__.py  agent_only.py  graph_factory.py  self_reflection.py
code_editing/agents/prompts/: __init__.py  agent_prompt.py
code_editing/agents/retrieval/: __init__.py  bm25_retrieval.py  faiss_retrieval.py  file_extensions.py  retriever_helper.py
code_editing/agents/tools/: __init__.py  acr_tools.py  (+6 more)
code_editing/backbones/: __init__.py  base_backbone.py  dummy_backbone.py  hf_backbone.py  openai_backbone.py
code_editing/baseline/: __init__.py  baseline.py
code_editing/configs/: backbones_configs.py  baseline_config.py  data_source_configs.py  evaluation_config.py  extractor_config.py  inference_config.py  preprocessor_config.py  prompts_configs.py  utils.py  wandb_config.py
code_editing/data_sources/: __init__.py  base_source.py  extract_code_base.py  git_data.py  hf_source.py  sources.py
code_editing/metrics/: __init__.py  base_metric.py  chrf_metric.py  code_bert_score_metric.py  exact_match_metric.py  format_adherence.py  gpt4_comparison.py  gpt4_eval.py  localization.py  pass_metric.py  swe_bench_metric.py  utils.py
code_editing/notebooks/: code_editing_tiny_eda.ipynb
code_editing/preprocessors/: base_preprocessor.py  truncation_preprocessor.py
code_editing/prompts/: __init__.py  agent_prompt.py  base_prompt.py  ce_prompts.py  extraction_prompt.py  prompt_utils.py
code_editing/scripts/: common.py  evaluate.py  run_agent.py  run_backbone.py  run_baseline.py  run_evaluation.py
code_editing/utils/: file_log.py  git_utils.py  tokenization_utils.py  wandb_utils.py
tests/: test_acr.py  test_edit.py
(+129 files in other folders)
